Fix Docker ESB settings; Remove Authorization

--- a/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.Docker.json
+++ b/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.Docker.json
@@ -6,5 +6,11 @@
     "ElasticSearch": {
       "Enabled": false
     }
+  },
+  "ESBSettings": {
+    "EndpointHost": "host.docker.internal",
+    "EndpointUser": "user",
+    "EndpointPassword": "password",
+    "ApplicationName": "VacancyService"
   }
 }
