--- a/CompanyService/NuGet.config
+++ b/CompanyService/NuGet.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="SagComponent" value="https://pkgs.dev.azure.com/sagsoftware/_packaging/SagComponent/nuget/v3/index.json" />
   </packageSources>
 </configuration>
