Added Elastic and Kibana

--- a/CompanyService/src/Sag.Service.Companies.Api/appsettings.Development.json
+++ b/CompanyService/src/Sag.Service.Companies.Api/appsettings.Development.json
@@ -1,7 +1,14 @@
 {
   "SagLogging": {
     "ElasticSearch": {
-      "Enabled": false
+      "Url": "http://localhost:9200",
+      "Enabled": true
     }
+  },
+  "ESBSettings": {
+    "EndpointHost": "localhost",
+    "EndpointUser": "user",
+    "EndpointPassword": "password",
+    "ApplicationName": "CompanyService"
   }
 }
