--- a/CompanyService/src/Sag.Service.Companies.Api/appsettings.json
+++ b/CompanyService/src/Sag.Service.Companies.Api/appsettings.json
@@ -3,19 +3,16 @@
     "SagCompany": "Server=localhost;Database=SagCompany;Trusted_Connection=False;MultipleActiveResultSets=true;User id=sa;password=localDevPassword!1;TrustServerCertificate=True"
   },
   "SagLogging": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
+     "ElasticSearch": {
+      "Url": "http://elasticsearch:9200",
+      "Enabled": true
     }
   },
   "SagFramework": {
     "Cors": "CORS"
   },
   "ESBSettings": {
-    "EndpointHost": "localhost",
+    "EndpointHost": "host.docker.internal",
     "EndpointUser": "user",
     "EndpointPassword": "password",
     "ApplicationName": "CompanyService"
