--- a/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.Docker.json
+++ b/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.Docker.json
@@ -4,7 +4,8 @@
   },
   "SagLogging": {
     "ElasticSearch": {
-      "Enabled": false
+      "Url": "http://elasticsearch:9200",
+      "Enabled": true
     }
   },
   "ESBSettings": {
