--- a/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.json
+++ b/VacancyService/src/Sag.Service.Vacancies.Api/appsettings.json
@@ -3,12 +3,9 @@
     "SagVacancy": "Server=localhost;Database=SagVacancy;Trusted_Connection=False;MultipleActiveResultSets=true;User id=sa;password=localDevPassword!1;TrustServerCertificate=True"
   },
   "SagLogging": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "ElasticSearch": {
+      "Url": "http://elasticsearch:9200",
+      "Enabled": true
     }
   },
   "SagFramework": {
