--- a/CompanyService/src/Sag.Service.Companies.Api/appsettings.Docker.json
+++ b/CompanyService/src/Sag.Service.Companies.Api/appsettings.Docker.json
@@ -4,7 +4,8 @@
   },
   "SagLogging": {
     "ElasticSearch": {
-      "Enabled": false
+      "Uri": "http://elasticsearch:9200",
+      "Enabled": true
     }
   },
   "ESBSettings": {
